# Godot-Ogham-Storyteller-Foundation

./: .gitignore  .gitmodules  ASSET_STORE_DESCRIPTION.md  CHANGELOG_1.0.0_to_1.0.5.md  README.md
.github/workflows/: build.yml
addons/FoundationOgham/: CMakeLists.txt  FoundationOgham.gdextension  FoundationOgham.gdextension.uid  StorytellerRegistry.gd  StorytellerRegistry.gd.uid  extension.manifest.json  heathen_manifest.json  plugin.cfg
addons/FoundationOgham/CSharp/: OghamContentKey.cs  OghamContentKey.cs.uid  OghamEntry.cs  OghamEntry.cs.uid  OghamInlineLinkParser.cs  OghamInlineLinkParser.cs.uid  OghamOption.cs  OghamOption.cs.uid  OghamSession.cs  OghamSession.cs.uid  OghamStory.cs  OghamStory.cs.uid  OghamVariables.cs  OghamVariables.cs.uid  Storyteller.cs  Storyteller.cs.uid
addons/FoundationOgham/editor/: OghamContentKeyCompactEditor.gd  OghamEditorPlugin.gd  OghamEditorPlugin.gd.uid  OghamInspectorPlugin.gd  OghamInspectorPlugin.gd.uid  OghamSettingsPanel.gd  OghamSettingsPanel.gd.uid
addons/FoundationOgham/gate/: extension_resolver_gate.gd  extension_resolver_gate.gd.uid  heathen_gate.gd
addons/FoundationOgham/src/private/: OghamContentKey.cpp  OghamEntry.cpp  OghamInlineLinkParser.cpp  OghamOption.cpp  OghamSession.cpp  OghamStory.cpp  OghamSubsystem.cpp  OghamVariables.cpp  Storyteller.cpp  register_types.cpp
addons/FoundationOgham/src/private/editor/: OghamContentKeyCompactEditor.cpp  OghamContentKeyPopup.cpp  OghamDocument.cpp  OghamEditorTypes.cpp  OghamExportWindow.cpp  OghamForkValidator.cpp  OghamGraphNode.cpp  OghamGraphView.cpp  OghamKeyLabelsNative.cpp  OghamKeyLabelsPopup.cpp  OghamLabelPickerPopup.cpp  OghamManifestIO.cpp  OghamNotesWindow.cpp  OghamOperationPopup.cpp  OghamOptionPopup.cpp  OghamPlayWindow.cpp  OghamPopupBase.cpp  OghamScriptExporter.cpp  OghamTargetPickerPopup.cpp
addons/FoundationOgham/src/public/: OghamContentKey.h  OghamEntry.h  OghamInlineLinkParser.h  OghamInterop.h  OghamOption.h  OghamSession.h  OghamStory.h  OghamSubsystem.h  OghamVariables.h  Storyteller.h  register_types.h
addons/FoundationOgham/src/public/editor/: OghamContentKeyCompactEditor.h  OghamContentKeyPopup.h  OghamDocument.h  OghamEditorTypes.h  OghamExportWindow.h  OghamForkValidator.h  OghamGraphNode.h  OghamGraphView.h  OghamKeyLabelsNative.h  OghamKeyLabelsPopup.h  OghamLabelPickerPopup.h  OghamManifestIO.h  OghamNotesWindow.h  OghamOperationPopup.h  OghamOptionPopup.h  OghamPlayWindow.h  OghamPopupBase.h  OghamScriptExporter.h  OghamTargetPickerPopup.h
